2003-04-02  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Check for __register_frame_info in both
	-lgcc and -lgcc_eh.
	* configure: Regenerated.

2003-04-01  Roland McGrath  <roland@redhat.com>

	* scripts/abilist.awk: Allow dots in soname suffix.

	* scripts/abilist.awk (emit): Fix bailout condition.

2003-04-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/sigsuspend.c: Use the
	IA-64 version.

	* elf/tls-macros.h [__ia64__] (TLS_IE, TLS_LD, TLS_GD): Add gp
	register as input to asm.

2003-04-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h (sigevent_t): Fix a typo.

2003-04-01  Andreas Jaeger  <aj@suse.de>

	* configure.in: Output as/ld as name if version is too old.

2003-03-31  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Don't require an installed C library in the test
	for ".set" assembler support.

2003-03-31  Roland McGrath  <roland@redhat.com>

	* signal/tst-sigset.c: New file.
	* signal/Makefile (tests): Add it.

2003-03-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/signum.h (_NSIG): Define to 65.
	* sysdeps/unix/sysv/linux/hppa/bits/signum.h (_NSIG): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/signum.h (_NSIG): Likewise.
	* sysdeps/unix/sysv/linux/bits/signum.h (_NSIG): Likewise.
	(__SIGRTMAX): Adjust accordingly.
	* sysdeps/gnu/siglist.c: If OLD2_SIGLIST_SIZE is defined define
	second compatibility symbol set.
	* sysdeps/unix/sysv/linux/siglist.h (OLD2_SIGLIST_SIZE): Define.

2003-03-31  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/m68020/bits/atomic.h (atomic_increment_and_test):
	Define.
	(atomic_decrement_and_test): Fix test.

2003-03-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/bits/atomic.h: New file.
	* sysdeps/sparc/sparc32/sparcv9/bits/atomic.h: New file.
	* sysdeps/sparc/sparc64/bits/atomic.h: New file.
	* sysdeps/sparc/sparc32/atomicity.h: Removed.